added eqeqeq eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,10 @@
                     "info"
                 ]
             }
+        ],
+        "eqeqeq": [
+            "error", 
+            "always"
         ]
     }
 }
